[package]
name = "defguard-proxy"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/DefGuard/proxy"
repository = "https://github.com/DefGuard/proxy"

[dependencies]
anyhow = "1.0"
# base `axum` deps
axum = { version = "0.7", features = ["macros", "tracing"] }
axum-client-ip = "0.5"
axum-extra = { version = "0.9", features = [
    "cookie",
    "cookie-private",
    "typed-header",
] }
# CLI
clap = { version = "4.4", features = ["derive", "env", "cargo"] }
# other utils
dotenvy = "0.15"
log = { version = "0.4", features = ["serde"] }
prost = "0.12"
rust-embed = { version = "8.4.0", features = ["include-exclude"] }
# data de/serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
# error handling
thiserror = "1.0"
# match axum-extra -> cookies
time = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
toml = { version = "0.8", default-features = false, features = ["parse"] }
# gRPC
tonic = { version = "0.10", features = ["gzip", "tls", "tls-roots"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tower_governor = "0.4"
# logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.4"

[build-dependencies]
prost-build = { version = "0.12" }
tonic-build = { version = "0.10" }

[profile.release]
lto = "thin"
strip = "symbols"
