[package]
name = "defguard-proxy"
version = "1.5.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/DefGuard/proxy"
repository = "https://github.com/DefGuard/proxy"

[dependencies]
# base `axum` deps
axum = { version = "0.7", features = ["macros", "tracing"] }
axum-client-ip = "0.6"
axum-extra = { version = "0.9", features = [
    "cookie",
    "cookie-private",
    "typed-header",
] }
# match axum-extra -> cookies
time = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tower-http = { version = "0.5", features = ["fs", "trace"] }
# logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = { version = "0.4", features = ["serde"] }
# data de/serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = { version = "0.8", default-features = false, features = ["parse"] }
# gRPC
tonic = { version = "0.12", features = ["gzip", "tls", "tls-roots"] }
prost = "0.13"
# error handling
thiserror = "1.0"
anyhow = "1.0"
# CLI
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
# other utils
dotenvy = "0.15"
url = { version = "2.5", features = ["serde"] }
tower_governor = "0.4"
# UI embedding
rust-embed = { version = "8.5", features = ["include-exclude"] }
mime_guess = "2.0"
base64 = "0.22.1"

[build-dependencies]
tonic-build = { version = "0.12" }
prost-build = { version = "0.13" }
vergen-git2 = { version = "1.0", features = ["build"] }

[profile.release]
lto = "thin"
strip = "symbols"
