[package]
name = "defguard-proxy"
version = "1.6.2"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/DefGuard/proxy"
repository = "https://github.com/DefGuard/proxy"

[dependencies]
defguard_version = { git = "https://github.com/DefGuard/defguard.git", rev = "8649a9ba225d7bd2066a09c9e1347705c34bd158" }
# base `axum` deps
axum = { version = "0.8", features = ["ws"] }
axum-client-ip = "0.7"
axum-extra = { version = "0.10", features = [
    "cookie",
    "cookie-private",
    "typed-header",
] }
# match axum-extra -> cookies
time = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tower-http = { version = "0.6", features = ["fs", "trace"] }
# logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = { version = "0.4", features = ["serde"] }
# data de/serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = { version = "0.9", default-features = false, features = [
    "parse",
    "serde",
] }
# gRPC
prost = "0.14"
tonic = { version = "0.14", features = ["gzip", "tls-native-roots"] }
tonic-prost = "0.14"
# error handling
thiserror = "2.0"
anyhow = "1.0"
# CLI
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
# other utils
dotenvy = "0.15"
url = { version = "2.5", features = ["serde"] }
tower_governor = "0.8"
# UI embedding
rust-embed = { version = "8.5", features = ["include-exclude"] }
mime_guess = "2.0"
base64 = "0.22"
tower = "0.5"
futures-util = "0.3"
ammonia = "4.1.1"

[build-dependencies]
tonic-prost-build = "0.14"
vergen-git2 = { version = "1.0", features = ["build"] }

[profile.release]
lto = "thin"
strip = "symbols"
